# sontag

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  ci.yml  release.yml
app/: cli.cpp  cli.hpp  sontag.cpp
cmake/: build_opts.cmake
include/: sontag.hpp
include/sontag/: analysis.hpp  cli.hpp  config.hpp  format.hpp  graph.hpp  interpreter.hpp  mcp.hpp  utils.hpp
src/: analysis.cpp  cli.cpp  editor.cpp  editor.hpp  graph.cpp  interpreter.cpp  mcp.cpp  opcode.hpp
src/internal/: delta.hpp  editor.cpp  editor.hpp  explorer.hpp  mem.hpp  metrics.hpp  opcode.hpp  platform.hpp  session_types.hpp  symbols.hpp  tables.hpp  types.hpp
tests/: 001.cpp  002.cpp  003.cpp  004.cpp  005.cpp  006.cpp  007.cpp  008.cpp  009.cpp  010.cpp  011.cpp  012.cpp  CMakeLists.txt  utils.cpp  utils.hpp
utils/: format.sh
